# IR2121

./: .gitignore  README.md  map.pgm  map.yaml  map9.pgm  map_TD.pgm  map_TD.yaml
Teleoperation/scripts/: .launch_bags_play1.bash.swp  config.rviz  launch_bags_play.bash  launch_bags_play1.bash  launch_robot-phisical_bags.bash  launch_robot-phisical_bringup.bash  launch_robot-phisical_teleop.bash  launch_ros_bags.bash  launch_rviz.bash
Teleoperation/scripts/rosbag2_2023_09_13-15_36_26/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_09_22-16_38_11/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_09_25-16_17_50/: .metadata.yaml.swp  metadata.yaml
Teleoperation/scripts/rosbag2_2023_09_27-14_41_03/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_09_29-07_44_19/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_09_29-08_03_54/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_09_29-08_17_23/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_09_29-08_35_14/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_10_21-19_09_03/: metadata.yaml  rosbag2_2023_10_21-19_09_03_0.db3
Teleoperation/scripts/rosbag2_2023_10_21-19_09_27/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_10_21-19_48_21/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_10_21-20_04_24/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_10_21-20_20_57/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_10_21-20_51_23/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_10_21-20_55_29/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_10_21-21_00_24/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_10_21-21_01_50/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_10_21-21_06_25/: metadata.yaml
Teleoperation/scripts/rosbag2_2023_10_21-21_12_46/: metadata.yaml  rosbag2_2023_10_21-21_12_46_0.db3
Worlds/: TD_n1.yaml  TD_n1_edited.yaml
Worlds/scripts/: config_robot.rviz  launch_amcl.bash  publish_transform.bash
tb3_ws/src/patrolling/: CMakeLists.txt  package.xml
tb3_ws/src/patrolling/src/: publisher copy 2.cpp  publisher copy.cpp  publisher.cpp  subscriber.cpp
(+6 files in other folders)
